syntax = "proto3";

option csharp_namespace = "Summer";

package summerZodiacSigns;

service SummerZodiacSigns {
	rpc FindZodiacSign (SummerZodiacRequest) returns (SummerZodiacResponse);
}

message SummerZodiacRequest {
	string birthDate = 1;
}

message SummerZodiacResponse {
	ZodiacSign sign = 1;
}

message ZodiacSign {
	string name = 1;
	int32 startDay = 2;
	int32 startMonth = 3;
	int32 endDay = 4;
	int32 endMonth = 5;

}